--- a/File-Comparison/Views/Home/Index.cshtml
+++ b/File-Comparison/Views/Home/Index.cshtml
@@ -71,8 +71,8 @@
                 $("#myForm").submit();
             }
         }
-        console.log(file_one)
-        console.log(file_two)
+        //console.log(file_one)
+        //console.log(file_two)
     })
 
 
