--- a/File-Comparison/Views/Shared/_Layout.cshtml
+++ b/File-Comparison/Views/Shared/_Layout.cshtml
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>@ViewData["Title"] - File_Comparison</title>
+    <title>@ViewData["Title"] </title>
     <link rel="stylesheet" href="~/css/bootstrap5.1.min.css" />
     <link rel="stylesheet" href="~/css/site.css" />
 </head>
@@ -21,9 +21,9 @@
                         <li class="nav-item">
                             <a class="nav-link text-white" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
                         </li>
-                        <li class="nav-item">
+                        @*<li class="nav-item">
                             <a class="nav-link text-white" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
-                        </li>
+                        </li>*@
                     </ul>
                 </div>
             </div>
@@ -35,7 +35,7 @@
         </main>
     </div>
 
-    <footer class="border-top footer text-muted">
+    <footer class="footer text-muted fixed-bottom">
         <div class="container">
             &copy; 2021 - File Comparison - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
         </div>
